--- a/app/webfront/src/components/Footer/Footer.module.css
+++ b/app/webfront/src/components/Footer/Footer.module.css
@@ -1,8 +1,119 @@
-.container {
+.footer {
+    margin: 0 auto;
+    margin-bottom: 16px;
+}
+
+.separatorContainer {
+    margin: 40px auto;
+}
+
+.separatorContainer > hr {
+    border: 1px solid var(--gray);
+}
+
+.contentContainer {
+    padding: 0 16px;
+}
+
+.copyriteContent {
+    font-size: 14px;
+    line-height: 1.429;
+    font-weight: 500;
+    text-align: center;
+}
+
+.upperContentContainer {
     display: flex;
-    width: 100%;
-    justify-content: space-between;
     align-items: center;
-    /* TODO delete, only for debug */
-    background-color: aquamarine;
+}
+
+.logoContainer {
+    flex-grow: 1;
+    text-decoration: none;
+}
+
+.logoContent {
+    font-weight: 800;
+    color: var(--extra-black);
+    font-size: 20px;
+    line-height: 1.2;
+}
+
+.socialLinksContainer {
+    width: 140px;
+    display: flex;
+    gap: 16px;
+    color: var(--extra-black);
+}
+
+.socialLinkItemContainer {
+    width: 36px;
+    height: 36px;
+}
+
+.socialLinkItem {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    color: var(--extra-black);
+    background-color: var(--white);
+    border: 1px solid var(--gray);
+    border-radius: 100px;
+
+    &:hover,
+    &:focus {
+        color: var(--white);
+        background-color: var(--extra-black);
+        border-color: transparent;
+        transition: var(--transition);
+        transition-property: color, background-color, border-color;
+    }
+}
+.socialIcon {
+    fill: currentColor;
+    width: 20px;
+    height: 20px;
+}
+
+/* Tablet Layout: Starts adapting at 768px */
+@media only screen and (min-width: 768px) {
+    .footer {
+        margin-bottom: 32px;
+    }
+
+    .contentContainer {
+        padding: 0 32px;
+    }
+
+    .logoContent {
+        font-size: 24px;
+        line-height: 1.6667;
+    }
+
+    .socialLinkItemContainer {
+        width: 40px;
+        height: 40px;
+    }
+
+    .copyriteContent {
+        font-size: 16px;
+        line-height: 1.5;
+    }
+
+    .socialLinksContainer {
+        width: 152px;
+    }
+}
+
+/* Desktop Layout: Starts adapting at 1440px */
+@media only screen and (min-width: 1440px) {
+    .footer {
+        margin-bottom: 40px;
+    }
+
+    .contentContainer {
+        padding: 0 80px;
+    }
 }
