--- a/app/webfront/src/components/Testimonial/Testimonial.module.css
+++ b/app/webfront/src/components/Testimonial/Testimonial.module.css
@@ -37,6 +37,8 @@
 }
 
 .reviewContent {
+    display: block;
+    height: 192px;
     font-weight: 500;
     font-size: 18px;
     line-height: 1.3333;
