--- a/app/webfront/src/components/SharedLayout/SharedLayout.module.css
+++ b/app/webfront/src/components/SharedLayout/SharedLayout.module.css
@@ -7,20 +7,20 @@
 }
 
 .paddingContainer {
-    padding: 0 8px;
+    padding: 8px 8px 0 8px;
 }
 
 /* Tablet Layout: Starts adapting at 768px */
 @media only screen and (min-width: 768px) {
     .paddingContainer {
-        padding: 0 16px;
+        padding: 16px 16px 0 16px;
     }
 }
 
 /* Desktop Layout: Starts adapting at 1440px */
 @media only screen and (min-width: 1440px) {
     .paddingContainer {
-        padding: 0 20px;
+        padding: 20px 20px 0 20px;
     }
 }
 
