--- a/app/webfront/src/components/Logo/Logo.module.css
+++ b/app/webfront/src/components/Logo/Logo.module.css
@@ -1,24 +1,24 @@
 @import '../../index.css';
 
 .logo {
-  color: var(--white, #FFF);
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 800;
-  line-height: 24px; /* 120% */
-  letter-spacing: -0.4px;
-  text-transform: lowercase;
-  text-decoration: none;
+    color: var(--white, #fff);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 24px; /* 120% */
+    letter-spacing: -0.4px;
+    text-transform: lowercase;
+    text-decoration: none;
 }
 
 .black {
-  color: var(--extra-black, #000);
+    color: var(--extra-black, #000);
 }
 
 @media only screen and (min-width: 768px) {
-  .logo {
-    font-size: 24px;
-    line-height: 28px; /* 116.667% */
-    letter-spacing: -0.48px;
-  }
+    .logo {
+        font-size: 24px;
+        line-height: 28px; /* 116.667% */
+        letter-spacing: -0.48px;
+    }
 }
