--- a/app/webfront/src/components/LoginForm/LoginForm.module.css
+++ b/app/webfront/src/components/LoginForm/LoginForm.module.css
@@ -16,9 +16,8 @@ input {
 }
 
 button[type='submit'] {
-    padding: 0.75rem;
-    font-weight: bold;
-    background-color: #007bff;
+    font-weight: 700;
+    background-color: #bfbebe;
     color: white;
     border: none;
     cursor: pointer;
