--- a/app/webfront/src/components/Profile/Profile.module.css
+++ b/app/webfront/src/components/Profile/Profile.module.css
@@ -24,16 +24,19 @@
 }
 
 .switchText {
-    margin-top: 1rem;
+    margin-top: 20px;
     text-align: center;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 18px;
+    color: #1a1a1a;
 }
 
 .switchBtn {
-    margin-left: 0.5rem;
     background: none;
-    color: #007bff;
+    color: #050505;
     border: none;
     cursor: pointer;
-    font-weight: bold;
-    text-decoration: underline;
+    font-weight: 500;
+    text-decoration: none;
 }
