--- a/app/webfront/src/components/LoginForm/LoginForm.module.css
+++ b/app/webfront/src/components/LoginForm/LoginForm.module.css
@@ -1,26 +1,71 @@
 .form {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 40px;
+    margin-bottom: 20px;
 }
 
-label {
+.inputFieldsWrapper{
+    width: 100%;
     display: flex;
     flex-direction: column;
-    font-weight: bold;
+    gap: 20px;
 }
 
-input {
-    padding: 0.5rem;
-    font-size: 1rem;
+.inputWrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.inputWithIcon {
+  position: relative;
+  width: 100%;
+}
+
+.inputField{
+    width: 100%;
+    padding: 16px 18px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    border-radius: 30px;
+    border-color: var(--gray);
+    border-width: 1px;
+    border-style: solid;
+}
+
+.inputField:focus, .inputField:hover, .inputField:not(:placeholder-shown) {
+    outline: none;
+    border-color: var(--extra-black);
+}
+
+.inputField::placeholder {
+  color: var(--black);
+  font-size: 1rem;
+  font-weight: 500;
 }
 
 button[type='submit'] {
     font-weight: 700;
-    background-color: #bfbebe;
-    color: white;
+    background-color: var(--gray);
+    color: var(--white);
     border: none;
     cursor: pointer;
+}
+
+.eyeButton {
+    position: absolute;
+    right: 18px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    display: flex;
+    align-items: center;
 }
 
 .error {
@@ -29,7 +74,6 @@ button[type='submit'] {
 }
 
 .serverError {
-    background-color: #ffe5e5;
     color: red;
     padding: 0.5rem;
     border-radius: 4px;
