Fe/modal styles (#41)
* Integrate sign in, sign up and user menu with authentication logic. Add global authentication by token and getting current user info. Styles for modal and forms still in progress.

* Upgrade Button. Add styles for Logout. Partially styled Sign In and Sign Up.

* Styled switch text.

* Add styles to forms. Add protected route to UserPage.

* Add suggested fixes.

---------

Co-authored-by: Serghei Filimonov <filimonov.sergey@gmail.com>

--- a/app/webfront/src/components/Modal/Modal.module.css
+++ b/app/webfront/src/components/Modal/Modal.module.css
@@ -13,24 +13,23 @@
 
 .modal {
     position: relative;
-    background: white;
-    padding: 20px;
-    border-radius: 8px;
-    max-width: 500px;
+    background: var(--white);
+    padding: 80px;
+    border-radius: 30px;
+    max-width: 560px;
     width: 100%;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
 
 .closeButton {
     position: absolute;
-    top: 8px;
-    right: 12px;
-    font-size: 20px;
+    top: 20px;
+    right: 20px;
+    font-size: 24px;
     background: none;
     border: none;
     cursor: pointer;
 }
 
 .content {
-    margin-top: 20px;
+    margin-top: 0px;
 }
