--- a/app/webfront/src/components/RecipeFilters/RecipeFilters.module.css
+++ b/app/webfront/src/components/RecipeFilters/RecipeFilters.module.css
@@ -15,5 +15,6 @@
 @media only screen and (min-width: 1440px) {
     .filtersContainer {
         flex-direction: column;
+        flex-grow: 1;
     }
 }
