--- a/app/webfront/src/components/Recipes/Recipes.module.css
+++ b/app/webfront/src/components/Recipes/Recipes.module.css
@@ -6,6 +6,18 @@
     margin-bottom: 64px;
 }
 
+.recipesListFiltersContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+.recipesListContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
 .recipesTitleContainer {
     display: flex;
     flex-direction: column;
@@ -41,6 +53,7 @@
 @media only screen and (min-width: 768px) {
     .recipesTitleContainer {
         max-width: 540px;
+        gap: 20px;
     }
 
     .backContainer {
@@ -57,12 +70,29 @@
 
     .recipesMainContainer {
         padding: 0 16px;
+        gap: 40px;
+    }
+
+    .recipesListFiltersContainer {
+        gap: 40px;
+    }
+
+    .recipesListContainer {
+        gap: 60px;
     }
 }
 
 /* Desktop Layout: Starts adapting at 1440px */
 @media only screen and (min-width: 1440px) {
+    .recipesListContainer {
+        width: 910px;
+    }
+
     .recipesMainContainer {
         padding: 0 60px;
+    }
+
+    .recipesListFiltersContainer {
+        flex-direction: row;
     }
 }
