--- a/app/webfront/src/components/TestimonialCard/TestimonialCard.module.css
+++ b/app/webfront/src/components/TestimonialCard/TestimonialCard.module.css
@@ -37,13 +37,19 @@
 }
 
 .reviewContent {
-    display: block;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    min-height: calc(1.3333em * 3); /* 3 рядки по line-height */
+
     font-weight: 500;
     font-size: 18px;
     line-height: 1.3333;
     letter-spacing: -0.02em;
     color: var(--extra-black);
-}
+  }
 
 .quotesIcon {
     width: 40px;
