--- a/app/webfront/src/components/Button/Button.module.css
+++ b/app/webfront/src/components/Button/Button.module.css
@@ -1,15 +1,20 @@
 .component {
     align-items: center;
-    border: 1px solid;
+    font-family: Mulish;
+    border-width: 1px;
+    border-style: solid;
     border-radius: 30px;
     display: inline-flex;
     font-size: 16px;
     font-weight: 700;
     justify-content: center;
-    padding: 15px 40px;
+    padding: 16px 32px;
     text-decoration: none;
     text-transform: uppercase;
     transition: all 0.3s;
+    line-height: 24px; /* 150% */
+    letter-spacing: -0.32px;
+    text-transform: uppercase;
 }
 
 .light {
@@ -26,6 +31,16 @@
         svg {
             fill: var(--white);
         }
+    }
+}
+
+.lightTransparent {
+    background-color: transparent;
+    border-color: var(--white);
+    color: var(--white);
+
+    svg {
+        fill: var(--white);
     }
 }
 
