--- a/app/webfront/src/components/NavBar/NavBar.module.css
+++ b/app/webfront/src/components/NavBar/NavBar.module.css
@@ -1,5 +1,8 @@
 .component {
-  position: relative;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
 }
 
 .open-button {
