--- a/app/webfront/src/components/Button/Button.module.css
+++ b/app/webfront/src/components/Button/Button.module.css
@@ -25,8 +25,8 @@
     border-color: var(--black);
     color: var(--black);
 
-    &:hover,
-    &:focus {
+    &:hover:not(:disabled),
+    &:focus:not(:disabled) {
         background-color: var(--extra-black);
         border-color: var(--extra-black);
         color: var(--white);
@@ -34,6 +34,12 @@
         svg {
             fill: var(--white);
         }
+    }
+
+    &:disabled {
+        border-color: var(--gray);
+        color: var(--gray);
+        cursor: not-allowed;
     }
 }
 
