--- a/app/webfront/src/components/Footer/Footer.module.css
+++ b/app/webfront/src/components/Footer/Footer.module.css
@@ -104,6 +104,9 @@
     }
 
     .contentContainer {
+        box-sizing: content-box;
+        margin: 0 auto;
         padding: 0 80px;
+        width: 1280px;
     }
 }
