--- a/app/webfront/src/components/Button/Button.module.css
+++ b/app/webfront/src/components/Button/Button.module.css
@@ -6,10 +6,18 @@
     font-size: 16px;
     font-weight: 700;
     justify-content: center;
+    letter-spacing: -0.02em;
     padding: 15px 40px;
     text-decoration: none;
     text-transform: uppercase;
     transition: all 0.3s;
+}
+
+.large {
+    padding: 15px 40px;
+}
+.small {
+    padding: 10px 25px;
 }
 
 .light {
@@ -17,8 +25,8 @@
     border-color: var(--black);
     color: var(--black);
 
-    &:hover,
-    &:focus {
+    &:hover:not(:disabled),
+    &:focus:not(:disabled) {
         background-color: var(--extra-black);
         border-color: var(--extra-black);
         color: var(--white);
@@ -26,6 +34,12 @@
         svg {
             fill: var(--white);
         }
+    }
+
+    &:disabled {
+        border-color: var(--gray);
+        color: var(--gray);
+        cursor: not-allowed;
     }
 }
 
@@ -52,6 +66,7 @@
 
 svg {
     height: 20px;
+    transition: all 0.3s;
     width: 20px;
 }
 
