--- a/app/webfront/src/components/SharedLayout/SharedLayout.module.css
+++ b/app/webfront/src/components/SharedLayout/SharedLayout.module.css
@@ -20,6 +20,7 @@
 /* Desktop Layout: Starts adapting at 1440px */
 @media only screen and (min-width: 1440px) {
     .paddingContainer {
+        max-width: 1600px;
         box-sizing: content-box;
         margin: 0 auto;
         padding: 20px 80px 0 80px;
