--- a/app/webfront/src/index.css
+++ b/app/webfront/src/index.css
@@ -64,6 +64,19 @@ input:-webkit-autofill {
     transition: background-color 5000s ease-in-out 0s;
 }
 
+.visually-hidden {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+}
+
 .swiper-pagination-bullet {
     width: 14px !important;
     height: 14px !important;
