--- a/app/webfront/src/pages/RecipesPage/RecipesPage.module.css
+++ b/app/webfront/src/pages/RecipesPage/RecipesPage.module.css
@@ -41,7 +41,7 @@
 
 @media screen and (min-width: 1280px) {
     .container {
-        padding: 40px;
+        padding: 0;
     }
     
     .title {
