--- a/app/webfront/src/components/OwnerRecipeCard/OwnerRecipeCard.module.css
+++ b/app/webfront/src/components/OwnerRecipeCard/OwnerRecipeCard.module.css
@@ -39,15 +39,19 @@
 }
 
 .title {
-    font-size: 24px;
-    font-weight: 600;
+    font-size: 20px;
+    font-weight: 800;
     margin: 0;
-    color: #3E4462;
+    letter-spacing: -0.02em;
+    color: var(--extra-black);
+    text-transform: uppercase;
 }
 
 .description {
     font-size: 16px;
-    color: #23262A;
+    font-weight: 500;
+    color: var(--extra-black);
+    letter-spacing: -0.02em;
     margin: 0;
     overflow: hidden;
     text-overflow: ellipsis;
