create main logic and basic UI for Add Recipe Page

--- a/app/webfront/src/index.css
+++ b/app/webfront/src/index.css
@@ -3,6 +3,7 @@
     --black: #1a1a1a;
     --gray: #bfbebe;
     --white: #ffffff;
+    --red: #ed5151;
     --transition: 300ms ease-in;
 
     font-family: 'Mulish', sans-serif;
