--- a/app/webfront/src/components/RecipeInfo/RecipeInfo.module.css
+++ b/app/webfront/src/components/RecipeInfo/RecipeInfo.module.css
@@ -7,12 +7,8 @@
     margin: 0 auto 64px auto;
 }
 
-.recipeImg {
-    width: 100%;
-    max-height: 318px;
-    border-radius: 30px;
-    object-fit: cover;
-    margin-bottom: 32px;
+.recipeImgDesktop {
+    display: none;
 }
 
 section {
@@ -77,7 +73,7 @@ section {
     color: #1a1a1a;
     font-size: 16px;
     font-weight: 700;
-    line-height: 24px; 
+    line-height: 24px;
     letter-spacing: -0.32px;
 }
 
@@ -151,11 +147,6 @@ section {
         margin-bottom: 100px;
     }
 
-    .recipeImg {
-        width: 100%;
-        max-height: 400px;
-    }
-
     .sectionTitle {
         font-size: 24px;
         line-height: 28px;
@@ -192,5 +183,9 @@ section {
         margin-bottom: 120px;
         width: 100%;
         max-width: 1280px;
+    }
+    .recipeImgDesktop {
+        display: block;
+        width: 100%;
     }
 }
