--- a/app/webfront/src/components/OwnerRecipeCard/OwnerRecipeCard.module.css
+++ b/app/webfront/src/components/OwnerRecipeCard/OwnerRecipeCard.module.css
@@ -95,7 +95,7 @@
 
 .seeButton {
     align-self: flex-end;
-    color: #FFFFFF;
+    color: #ffffff;
     border: 1px solid var(--extra-black);
     border-radius: 100px;
     padding: 12px 24px;
@@ -115,16 +115,16 @@
         padding: 16px;
         gap: 20px;
     }
-    
+
     .imageContainer {
         width: 100%;
         height: 200px;
     }
-    
+
     .title {
         font-size: 20px;
     }
-    
+
     .description {
         font-size: 14px;
     }
@@ -135,12 +135,12 @@
         padding: 20px;
         gap: 24px;
     }
-    
+
     .imageContainer {
         width: 150px;
         height: 150px;
     }
-    
+
     .title {
         font-size: 22px;
     }
