--- a/app/webfront/src/components/RegisterForm/RegisterForm.module.css
+++ b/app/webfront/src/components/RegisterForm/RegisterForm.module.css
@@ -5,7 +5,7 @@
     margin-bottom: 20px;
 }
 
-.inputFieldsWrapper{
+.inputFieldsWrapper {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -13,18 +13,18 @@
 }
 
 .inputWrapper {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 
 .inputWithIcon {
-  position: relative;
-  width: 100%;
+    position: relative;
+    width: 100%;
 }
 
-.inputField{
+.inputField {
     width: 100%;
     padding: 16px 18px;
     font-size: 16px;
@@ -36,15 +36,17 @@
     border-style: solid;
 }
 
-.inputField:focus, .inputField:hover, .inputField:not(:placeholder-shown) {
+.inputField:focus,
+.inputField:hover,
+.inputField:not(:placeholder-shown) {
     outline: none;
     border-color: var(--extra-black);
 }
 
 .inputField::placeholder {
-  color: var(--black);
-  font-size: 1rem;
-  font-weight: 500;
+    color: var(--black);
+    font-size: 1rem;
+    font-weight: 500;
 }
 
 button[type='submit'] {
