--- a/app/webfront/src/components/CookingTime/CookingTime.module.css
+++ b/app/webfront/src/components/CookingTime/CookingTime.module.css
@@ -1,6 +1,7 @@
 .wrapper {
     width: fit-content;
     display: flex;
+    align-items: flex-start;
     flex-direction: column;
     gap: 16px;
 }
