--- a/app/webfront/src/components/FileInput/FileInput.module.css
+++ b/app/webfront/src/components/FileInput/FileInput.module.css
@@ -34,7 +34,12 @@
     height: auto;
 }
 
-@media only screen and (min-width: 768px) {
+.uploadBtn {
+    width: fit-content;
+    align-self: center;
+    background-color: transparent;
+    padding: 0;
+    border-bottom: 1px solid var(--black);
 }
 
 @media only screen and (min-width: 1440px) {
