small-style-fix

--- a/app/webfront/src/components/RecipePreparation/RecipePreparation.module.css
+++ b/app/webfront/src/components/RecipePreparation/RecipePreparation.module.css
@@ -20,6 +20,10 @@
     font-weight: 500;
     line-height: 24px;
     letter-spacing: -0.32px;
+    margin-bottom: 20px;
+}
+
+.instructionsList:last-of-type{
     margin-bottom: 40px;
 }
 
