--- a/app/webfront/src/components/RecipeInfo/RecipeInfo.module.css
+++ b/app/webfront/src/components/RecipeInfo/RecipeInfo.module.css
@@ -1,14 +1,24 @@
 .recipePageContainer {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    max-width: 343px;
-    margin: 0 auto 64px auto;
+    gap: 40px;
+    margin-bottom: 20px;
 }
 
-.recipeImgDesktop {
-    display: none;
+.recipeImgContainer {
+    width: 100%;
+}
+.recipeImg {
+    display: block;
+    width: 100%;
+    height: auto;
+    border-radius: 30px;
+}
+.recipe {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    gap: 20px;
 }
 
 section {
@@ -141,12 +151,6 @@ section {
 }
 
 @media only screen and (min-width: 768px) {
-    .recipePageContainer {
-        width: 704px;
-        max-width: 704px;
-        margin-bottom: 100px;
-    }
-
     .sectionTitle {
         font-size: 24px;
         line-height: 28px;
@@ -179,13 +183,8 @@ section {
 @media only screen and (min-width: 1440px) {
     .recipePageContainer {
         flex-direction: row;
-        gap: 80px;
-        margin-bottom: 120px;
-        width: 100%;
-        max-width: 1280px;
     }
-    .recipeImgDesktop {
-        display: block;
-        width: 100%;
+    .recipeImgContainer {
+        width: 551px;
     }
 }
