add redirect to Login for unauthorized user

--- a/app/webfront/src/components/IngredientCard/IngredientCard.module.css
+++ b/app/webfront/src/components/IngredientCard/IngredientCard.module.css
@@ -33,4 +33,11 @@
 .deleteBtn {
     cursor: pointer;
     align-self: start;
+    background-color: transparent;
+    padding: 5px;
+}
+
+.deleteIcon {
+    width: 20px;
+    height: auto;
 }
