--- a/app/webfront/src/components/OwnerRecipeCard/OwnerRecipeCard.module.css
+++ b/app/webfront/src/components/OwnerRecipeCard/OwnerRecipeCard.module.css
@@ -1,12 +1,7 @@
 .card {
-    width: 100%;
-    min-width: 846px;
-    max-height: 100px;
     display: flex;
-    align-items: center;
-    gap: 16px;
-    padding: 26px 26px 26px 0;
-    background: #fff;
+    align-items: flex-start;
+    gap: 10px;
     border-radius: 8px;
     transition: transform 0.2s ease;
 }
@@ -16,59 +11,52 @@
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12);
 }
 
-.imageContainer {
-    padding-left: 0;
-    position: relative;
-    width: 100px;
-    height: 100px;
-    flex-shrink: 0;
-}
-
 .image {
-    width: 100px;
-    height: 100px;
+    width: 75px;
+    height: 75px;
     border-radius: 8px;
     object-fit: cover;
 }
 
 .content {
     flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 14px;
+    width: calc(100% - 75px - 20px - 90px);
 }
 
 .title {
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 800;
-    margin: 0;
+    margin-bottom: 8px;
     letter-spacing: -0.02em;
     color: var(--extra-black);
     text-transform: uppercase;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .description {
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 500;
-    color: var(--extra-black);
+    color: var(--gray);
     letter-spacing: -0.02em;
     margin: 0;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 4;
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     flex-grow: 1;
 }
 
 .actions {
-    top: 0;
-    right: 8px;
     display: flex;
     gap: 8px;
+    padding-left: 6px
 }
 
 .actionButton {
+    background: none;
     width: 38px;
     height: 38px;
     display: flex;
@@ -81,7 +69,7 @@
 }
 
 .actionButton:hover {
-    background: var(--extra-black);
+    background-color: var(--extra-black);
 }
 
 .actionButton img {
@@ -90,7 +78,7 @@
 }
 
 .actionButton:hover img {
-    filter: brightness(10);
+    filter: brightness(50);
 }
 
 .seeButton {
@@ -109,39 +97,36 @@
     background-color: var(--extra-black);
 }
 
-@media screen and (max-width: 767px) {
+@media (min-width: 768px) {
     .card {
-        flex-direction: column;
-        padding: 16px;
-        gap: 20px;
+        gap: 16px;
     }
 
-    .imageContainer {
-        width: 100%;
-        height: 200px;
+    .image {
+        width: 100px;
+        height: 100px;
+    }
+
+    .content {
+        width: calc(100% - 100px - 32px - 100px);
     }
 
     .title {
         font-size: 20px;
+        margin-bottom: 10px;
     }
 
     .description {
-        font-size: 14px;
-    }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1279px) {
-    .card {
-        padding: 20px;
-        gap: 24px;
+        color: var(--black);
+        font-size: 16px;
     }
 
-    .imageContainer {
-        width: 150px;
-        height: 150px;
+    .actions {
+        padding-left: 16px;
     }
 
-    .title {
-        font-size: 22px;
+    .actionButton {
+        width: 42px;
+        height: 42px;
     }
 }
