--- a/app/webfront/src/pages/MyFavoritesPage/MyFavoritesPage.module.css
+++ b/app/webfront/src/pages/MyFavoritesPage/MyFavoritesPage.module.css
@@ -11,21 +11,9 @@
     color: #001833;
 }
 
-.recipeList {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    max-width: 846px;
-    margin: 0 auto;
-    gap: 40px;
-    list-style: none;
-    padding: 0;
-}
 
 .recipeItem {
-    width: 100%;
-    min-height: 100px;
-    transition: transform 0.3s ease;
+    margin-bottom: 32px;
 }
 
 .recipeItem:hover {
@@ -39,9 +27,13 @@
     }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1440px) {
     .container {
         padding: 0;
+    }
+
+    .recipeItem {
+        margin-bottom: 40px;
     }
 
     .title {
